rose-pine to tmux and waybar

--- a/dots/.config/waybar/style.css
+++ b/dots/.config/waybar/style.css
@@ -1,7 +1,7 @@
 * {
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: Jetbrains Mono, FontAwesome, Roboto, Helvetica, Arial, sans-serif;
-    font-size: 14px;
+    font-family: PT Mono, FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+    font-size: 12px;
 }
 
 window#waybar {
@@ -42,25 +42,27 @@ window#waybar.firefox {
 #workspaces button {
     padding: 0px 5px;
     /*background-color: rgba(103, 41, 52, 0.1);*/
-    background-color: transparent;
-    color: #672934;
-    /*color: #672934*/
+    background-color: #191724;
+    color: #ebbcba;
     /* Use box-shadow instead of border so the text isn't offset */
     /*box-shadow: inset 0 -3px transparent;*/
     /* Avoid rounded borders under each workspace name */
-    border: none;
-    border-radius: 4;
+    border: 1px solid #191724;
+    border-radius: 1;
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 #workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
-    box-shadow: inset 0 -3px #cab3b6;
+    background: #ebbcba;
+    color: #1f1d2e;
+    /* box-shadow: inset 0 -3px #ffee33; */
 }
 
-#workspaces button.focused {
-    background-color: #986e75;
-    box-shadow: inset 0 -3px #986e75;
+#workspaces button.active {
+    background-color: #26233a;
+    color: #f6c177;
+    /*box-shadow: inset 0 -3px #000000;*/
+    border: 4px solid #26233a;
 }
 
 #workspaces button.urgent {
@@ -86,10 +88,12 @@ window#waybar.firefox {
 #mode,
 #idle_inhibitor,
 #mpd {
-    padding: 0 10px;
-    color: #ffffff;
+    padding: 0 8px;
+    /*color: #ffffff; */
+    border-radius: 2;
+    border: 1px solid #191724;
 }
-
+    
 #window,
 #workspaces {
     margin: 0 4px;
@@ -106,22 +110,18 @@ window#waybar.firefox {
 }
 
 #clock {
-    border-radius: 4;
-    background-color: #672934;
-    opacity: 0.7;
+    background-color: #1f1d2e;
+    color: #f6c177;
 }
 
 #battery {
-    border-radius: 4;
-    background-color: #ffffff;
-    color: #000000;
-    opacity: 0.7;
+    background-color: #908caa;
+    color: #240046;
 }
 
 #battery.charging, #battery.plugged {
-    color: #000000;
-    background-color: #00ff00;
-    opacity: 0.7;
+    color: #240046;
+    background-color: #31748f;
 }
 
 @keyframes blink {
@@ -146,93 +146,65 @@ label:focus {
 }
 
 #cpu {
-    border-radius: 4;
     background-color: #2ecc71;
     color: #000000;
 }
 
 #memory {
-    border-radius: 4;
-    border-radius: 4;
-    background-color: #4f242e;
-    opacity: 0.7;
 }
 
 #disk {
-    border-radius: 4;
     background-color: #964B00;
 }
 
 #backlight {
-    border-radius: 4;
-    background-color: #90b1b1;
-    opacity: 0.7;
-}
-
-#network {
-    border-radius: 4;
-    background-color: #986e75;
-    opacity: 0.7;
+    background-color: #5829a7;
+    color: #e0aaff;
 }
 
 #network.disconnected {
-    border-radius: 4;
     background-color: #f53c3c;
-    opacity: 0.7;
+}
+#network.connected {
+    background-color: #393552;
+    color: #000;
 }
 
 #pulseaudio {
-    border-radius: 4;
-    border-radius: 4;
-    /*background-color: #201922;*/
-    background-color: rgba(32, 25, 34, 0.5);
-    color: #ffffff;
-    opacity: 0.7;
+    background-color: #191724;
+    /*background-color: rgba(32, 25, 34, 1);*/
+    color: #f6c177;
 }
 
 #pulseaudio.muted {
-    border-radius: 4;
-    background-color: #90b1b1;
-    color: #2a5c45;
-    opacity: 0.7;
+    background-color: #eb6f92;
+    color: #191724;
 }
 
 #custom-media {
-    border-radius: 4;
     background-color: #66cc99;
     color: #2a5c45;
     min-width: 100px;
-    opacity: 0.7;
 }
 
 #custom-media.custom-spotify {
-    border-radius: 4;
     background-color: #66cc99;
-    opacity: 0.7;
 }
 
 #custom-media.custom-vlc {
-    border-radius: 4;
     background-color: #ffa000;
-    opacity: 0.7;
 }
 
 #temperature {
-    border-radius: 4;
     background-color: #f0932b;
-    opacity: 0.7;
 }
 
 #temperature.critical {
-    border-radius: 4;
     background-color: #eb4d4b;
-    opacity: 0.7;
 
 }
 #tray {
-    border-radius: 4;
-    background-color: #2980b9;
-    opacity: 0.7;
+    background-color: #1f1d2e;
 }
 
 #tray > .passive {
@@ -245,19 +217,15 @@ label:focus {
 }
 
 #idle_inhibitor {
-    border-radius: 4;
-    background-color: #2d3436;
-    opacity: 0.7;
+    background-color: #10002b;
 }
 
 #idle_inhibitor.activated {
-    border-radius: 4;
     background-color: #ecf0f1;
     color: #2d3436;
 }
 
 #mpd {
-    border-radius: 4;
     background-color: #66cc99;
     color: #2a5c45;
 }
