new wallpaper, new plugin neovim

--- a/dots/.config/waybar/style.css
+++ b/dots/.config/waybar/style.css
@@ -1,6 +1,6 @@
 * {
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: Space Mono Nerd Font, FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+    font-family: Jetbrains Mono, FontAwesome, Roboto, Helvetica, Arial, sans-serif;
     font-size: 12px;
     padding: 0px 0px;
     margin: 0 1;
