--- a/dots/.config/gtk-3.0/gtk.css
+++ b/dots/.config/gtk-3.0/gtk.css
@@ -1,4 +1,3 @@
-
 /* .nemo-window .sidebar .view { */
 /*     background-color: #1d2021; */
 /*     color: #ebdbb2; */
@@ -6,7 +5,6 @@
 /* } */
 /**/
 /* .nemo-window .view { */
-/*     /* background-color: #aacc99; */ */
 /*     background-color: #1d2021; */
 /*     color: #ebdbb2; */
 /* } */
@@ -16,13 +14,11 @@
 /* } */
 /**/
 /* .nemo-window { */
-/*     /* background-color: #afbc99; */ */
 /*     background-color: #504945; */
 /*     color: #ebdbb2; */
 /* } */
 /**/
 /* .nemo-window toolbar { */
-/*     /* background-color: #bbcf99; */ */
 /*     background-color: #171a1a; */
 /*     color: #ebdbb2; */
 /* } */
@@ -37,10 +33,9 @@ window.thunar {
   /* hide separator */
 }
 window.thunar treeview {
-  /*background: rgba(224, 170, 255, 0.8);*/
   background: rgba(16, 0, 43, 0.8);
   padding: 3px;
-  font: Iosevka 17px;
+  /* font: Iosevka 17px; */
 }
 window.thunar grid *:selected,
 window.thunar grid *:active {
@@ -72,18 +67,12 @@ window.thunar toolbar entry {
   padding: 0px 1rem;
 }
 window.thunar toolbar entry image {
-  background-image: image(rgba(54, 61, 63, 1)));
+  background-image: image(rgba(54, 61, 63, 1));
 }
 window.thunar paned grid {
   background: #15404b;
   color: #dadada;
 }
 window.thunar toolbar {
-  /*background: none;*/
   padding: 5px 0;
 }
-/*window.thunar separator {*/
-  /*background-image: image(#131a1c);*/
-  /*background-size: 1px 1px;*/
-  /*background-position: center center;*/
-/*}*/
