edit alacritty.yml, gtk-3.0 and waybar

--- a/dots/.config/waybar/style.css
+++ b/dots/.config/waybar/style.css
@@ -1,9 +1,9 @@
 * {
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: Jetbrains Mono, FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+    font-family: Victor Mono, FontAwesome, Roboto, Helvetica, Arial, sans-serif;
     font-size: 12px;
-    padding: 0px 0px;
-    margin: 0 1;
+    padding: 0px 4px;
+    margin: 0 0;
     min-height: 0px;
     min-width: 0px;
 }
@@ -44,7 +44,7 @@ window#waybar.firefox {
 }
 
 #workspaces button {
-    padding: 5px 0px;
+    padding: 5px 5px;
     /*background-color: rgba(103, 41, 52, 0.1);*/
     /* background-color: #191724; */
     background-color: #0c0c0c;
